corrected z-index for header

--- a/src/components/MainFeatures/__header/main-features__header.css
+++ b/src/components/MainFeatures/__header/main-features__header.css
@@ -6,6 +6,7 @@
     text-transform: uppercase;
     color: #2E3A59;
     margin: 22px 0 0;
+    z-index: 2;
 }
 
 @media screen and (max-width: 719px) {
